# native-sdk

./: .gitignore  .gitmodules  BUILD_WITH_ZIG.md  CMakeLists.txt  LICENSE  README.md  build-wasm.sh  build.zig  build.zig.zon
.github/: CODEOWNERS
.github/workflows/: gamemaker.yml  godot.yml  linux-thread-safety.yml  release.yml  swift.yml  tests.yml  zig.yml
cmake/: colyseus-config.cmake.in
docs/: BUILD_WITH_ZIG.md  TLS_SUPPORT.md
example/: CMakeLists.txt  simple_example.c
example-server/: .env.development  package-lock.json  package.json
example-server/src/: app.config.ts
example-server/src/config/: auth.config.ts
example-server/src/rooms/: MyRoom.ts  TestRoom.ts  ViewTestRoom.ts
examples/: CMakeLists.txt  auth_example.c  simple_example.c
examples/schema/: my_room_state.h
include/colyseus/: client.h  http.h  messages.h  msgpack_builder.h  protocol.h  room.h  schema.h  settings.h  tls_context.h  transport.h  websocket_transport.h
include/colyseus/auth/: auth.h  secure_storage.h
include/colyseus/schema/: callbacks.h  collections.h  decode.h  decoder.h  dynamic_schema.h  ref_tracker.h  schema.h  types.h
include/colyseus/utils/: base64.h  sha1.h  sha1_c.h  strUtil.h
platforms-bkp/godot/src/: register_types.c
src/: client.c  client.cpp  room.c  room.cpp
src/auth/: auth.c  secure_storage.c
src/certs/: ca_bundle.c  ca_bundle.h  system_certs.h  system_certs.zig
src/common/: settings.c  settings.cpp
src/msgpack/: msgpack_builder.zig  msgpack_reader.zig
src/network/: http.c  http.cpp  http.zig  http_web.c  websocket_transport.c  websocket_transport.cpp  websocket_transport_web.c
src/schema/: callbacks.c  collections.c  decode.c  decoder.c  dynamic_schema.c  ref_tracker.c  serializer.c
src/utils/: base64.cpp  sha1_c.c  strUtil.c  strUtil.cpp  strUtil.zig
tests/: README.md  test_auth.c  test_auth.zig  test_http.c  test_http.zig  test_integration.c  test_integration.zig  test_messages.zig  test_room.c  test_room.zig  test_schema.zig  test_schema_callbacks.zig  test_storage.c  test_storage.zig  test_suite.zig  test_view_callbacks.zig
tests/schema/: test_room_state.h
